--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 <body>
     <h1>Subdomain Takeover Proof of Concept</h1>
     <p>This subdomain has been claimed by  syedshahwar_shah.</p>
-    <p></p>
+    <p>If you are the owner of this subdomain, please address the issue to prevent misuse.</p>
     <div class="footer">
-        <p></p>
-        <p></p>
+        <p>Reported by [Your Name or Handle]</p>
+        <p>No malicious actions have been taken. This PoC is strictly for security testing purposes.</p>
     </div>
 </body>
 </html>
